# playwright-test-scaffold

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.cursor/: README.md
.github/: dependabot.yml
config/: README.md  project.yaml  project.yaml.example
core/: base_page.py  fixtures.py  page_actions.py  page_utils.py  page_waits.py
docs/: PRD_PASSWORD_MANAGEMENT.md  TLDR.md  account-pool-management.md  admin-users-final-fix-summary.md  admin-users-final-test-report.md  admin-users-locator-fixes.md  admin-users-matrix-upgrade-summary.md  admin-users-test-progress.md  admin-users-test-run-summary.md  admin-users-test-summary.md  architecture.md  bug-report-sisyphus-platform-20260115.md  constitution-deep-dive.md  constitution-v2-upgrade-summary.md  error-validation-diagnosis.md  error-validation-fix-summary.md  framework_overview.md  quick-demo.sh  quick-templates.md  requirements.md  research-agent-deep-understanding.md  rules.yaml  spec-kit-guide.md  spec-kit-hands-on-guide.md  spec-kit-integration-explained.md  spec-kit-quickstart.md  specify-folder-deep-analysis.md  specs-015-admin-users-deep-analysis.md  test-reports-management.md  test-reports-optimization-summary.md  test-workflow.md  unknown-page-complete-workflow.md  users-tests-refactor-plan.md  workflow-comparison.md
eval/: CONFIG_GUIDE.md  README.md  __init__.py  checkers.py  config.py  example.py  llm_client.py  llm_evaluator.py  pipeline.py  pytest_plugin.py  rule_evaluator.py
generators/: __init__.py  element_extractor.py  generate_all_test_plans.py  generate_all_test_plans_evidence.py  generate_all_test_plans_runner.py  generate_all_test_plans_url.py  interfaces.py  mcp_page_analyzer.py  page_analyzer.py  page_object_generator.py  page_types.py  plan_to_automation.py  refresh_page_objects.py  rule_deriver.py  test_case_generator.py  test_case_generator_helpers_mixin.py  test_case_generator_naming_mixin.py  test_case_generator_p0_mixin.py  test_case_generator_p1_mixin.py  test_case_generator_p2_security_mixin.py  test_case_templates.py  test_code_generator.py  test_data_generator.py  test_plan_formatter.py  test_plan_generator.py  test_plan_rule_cases.py  test_plan_rule_helpers.py  test_plan_scenarios.py  utils.py
pages/: abp_languages_switch_page.py  account_forgotpassword_page.py  account_login_page.py  account_register_page.py  admin_page.py  admin_permissions_page.py  admin_profile_change_password_page.py  admin_profile_page.py  admin_roles_page.py  admin_settings_feature_management_page.py  admin_settings_page.py  admin_users_page.py  admin_users_roles_page.py  change_password_page.py  home_page.py  login_page.py  personal_settings_page.py  workflow_page.py
scripts/: add_admin_accounts.py  assign_admin_roles.py  cleanup_allure_folders.sh  cleanup_roles.py  cleanup_roles_playwright.py  cleanup_test_roles.py  register_accounts.py  register_forgotpassword_boundary_accounts_api.py  register_login_boundary_accounts.py  register_login_boundary_accounts_api.py  speckit.py  speckit_core.py  verify_login_boundary_accounts.py
test-data/: LOGIN_BOUNDARY_ACCOUNTS.md  README.md  abp_languages_switch_data.json  account_forgotpassword_data.json  account_login_data.json  account_register_data.json  admin_data.json  (+17 more)
(+383 files in other folders)
